added pages folder to hold all pages of website

--- a/shivsagar.com/shiv-sagar/index.html
+++ b/shivsagar.com/shiv-sagar/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Vishnu Sagar Restaurent and Lodge</title>
+<title>Vishnu Sagar Restaurant and Lodge</title>
 <meta charset="utf-8">
 <meta name="HandheldFriendly" content="true">
 <link rel="icon" href="images/favicon.ico">
@@ -75,32 +75,32 @@ $(window).load(function () {
               <li class="current"><a href="index.html">Home</a></li>
               <li class="with_ul"><a href="#">About Us</a>
                <ul>
-                  <li><a href="mission.html"> MISSION</a></li>
-                  <li><a href="ourstory.html">Our Story</a></li>
+                  <li><a href="pages/mission.html"> MISSION</a></li>
+                  <li><a href="pages/ourstory.html">Our Story</a></li>
               <!--     <li><a href="features-rest.html">Features</a></li> -->
-				  <li><a href="faqs.html">FAQ's</a></li>
+				  <li><a href="pages/faqs.html">FAQ's</a></li>
                 </ul>
               </li>
 			  <li ><a href="#">Lodge</a>
 			  <ul>
-			      <li><a href="features-rest.html"> Features</a></li>
-                  <li><a href="index.php">Reserve</a></li>
-				  <li><a href="portfolio-l.html">Gallery</a></li>
-                  <li><a href="policies.html">Policies</a></li>
+			      <li><a href="pages/features-rest.html"> Features</a></li>
+                  <!-- <li><a href="index.php">Reserve</a></li> -->
+				  <li><a href="pages/portfolio-l.html">Gallery</a></li>
+                  <li><a href="pages/policies.html">Policies</a></li>
 			  </ul>
 			   </li>
-			  <li><a href="menu.html">Restaurant</a>
+			  <li><a href="pages/menu.html">Restaurant</a>
 			   <ul>
 			      <li><a href="menu.html"> MENU</a></li>
-                  <li><a href="portfolio.html">Gallery</a></li>
-				  <li><a href="features-rest.html"> Features</a></li>
+                  <li><a href="pages/portfolio.html">Gallery</a></li>
+				  <li><a href="pages/features-rest.html"> Features</a></li>
                   <li><a href="#">Chefs</a></li>
 			   </ul>
 			  </li>
 			  
             <!--   <li><a href="portfolio.html">Portfolio</a></li>  -->
            <!--    <li><a href="news.html">News</a></li> -->
-              <li><a href="contacts.html">Contacts</a></li>
+              <li><a href="pages/contacts.html">Contacts</a></li>
             </ul>
           </nav>
           <div class="clear"></div>
