--- a/shivsagar.com/shiv-sagar/pages/mission.html
+++ b/shivsagar.com/shiv-sagar/pages/mission.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Gourmet Traditional Restaurant</title>
+<title>Vishnu Sagar Restaurant and Lodge | Mission</title>
 <meta charset="utf-8">
-<link rel="icon" href="images/favicon.ico">
-<link rel="shortcut icon" href="images/favicon.ico">
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/slider.css">
-<script src="js/jquery.js"></script>
-<script src="js/jquery-migrate-1.1.1.js"></script>
-<script src="js/superfish.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/sForm.js"></script>
-<script src="js/jquery.carouFredSel-6.1.0-packed.js"></script>
-<script src="js/tms-0.4.1.js"></script>
+<link rel="icon" href="../images/favicon.ico">
+<link rel="shortcut icon" href="../images/favicon.ico">
+<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="../css/slider.css">
+<script src="../js/jquery.js"></script>
+<script src="../js/jquery-migrate-1.1.1.js"></script>
+<script src="../js/superfish.js"></script>
+<script src="../js/jquery.easing.1.3.js"></script>
+<script src="../js/sForm.js"></script>
+<script src="../js/jquery.carouFredSel-6.1.0-packed.js"></script>
+<script src="../js/tms-0.4.1.js"></script>
 <script>
 
 $(window).load(function () {
@@ -65,11 +65,11 @@ $(window).load(function () {
  <header>
     <div class="container_12">
       <div class="grid_12">
-        <h1><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
+        <h1><a href="../index.html"><img src="../images/logo.png" alt=""></a></h1>
         <div class="menu_block">
           <nav>
             <ul class="sf-menu">
-              <li class="current"><a href="index.html">Home</a></li>
+              <li class="current"><a href="../index.html">Home</a></li>
               <li class="with_ul"><a href="#">About Us</a>
                <ul>
                   <li><a href="mission.html"> MISSION</a></li>
@@ -112,7 +112,7 @@ $(window).load(function () {
     <div class="container_12">
        <!-- <div class="grid_7"> -->
         <h2>Vishnu Sagar Restuarant</h2>
-        <div class="page1_block col1"> <img src="images/welcome_img.png" alt="">
+        <div class="page1_block col1"> <img src="../images/welcome_img.png" alt="">
           <div class="extra_wrapper">
             <!-- <p><span class="col2"><a href="#">Click here</a></span> for more info about this free website template created by TemplateMonster.com </p> -->
 Delighting our guests 
@@ -151,7 +151,7 @@ We will actively participate in the improvement of the environment, just as we w
 		 <div class="bottom_block"></div>
 			
 			  <h2>Vishnu Sagar Lodge</h2>
-        <div class="page1_block col1"> <img src="images/welcome1_img.png" alt="">
+        <div class="page1_block col1"> <img src="../images/welcome1_img.png" alt="">
           <div class="extra_wrapper">
             <!-- <p><span class="col2"><a href="#">Click here</a></span> for more info about this free website template created by TemplateMonster.com </p> -->
 Vision, mission and values
@@ -200,35 +200,35 @@ Financial results as measures of success
           <a href="#" class="prev"></a><a href="#" class="next"></a>
           <ul class="carousel1">
             <li>
-              <div><img src="images/page1_img1.jpg" alt="">
+              <div><img src="../images/page1_img1.jpg" alt="">
                 <div class="col1 upp"> <a href="#">Lorem ipsum doamet consectet</a></div>
                 <span> Dorem ipsum dolor amet consectetur</span>
                 <div class="price">45$</div>
               </div>
             </li>
             <li>
-              <div><img src="images/page1_img2.jpg" alt="">
+              <div><img src="../images/page1_img2.jpg" alt="">
                 <div class="col1 upp"> <a href="#">Lorem ipsum doamet consectet</a></div>
                 <span> Dorem ipsum dolor amet consectetur</span>
                 <div class="price">45$</div>
               </div>
             </li>
             <li>
-              <div><img src="images/page1_img3.jpg" alt="">
+              <div><img src="../images/page1_img3.jpg" alt="">
                 <div class="col1 upp"> <a href="#">Lorem ipsum doamet consectet</a></div>
                 <span> Dorem ipsum dolor amet consectetur</span>
                 <div class="price">45$</div>
               </div>
             </li>
             <li>
-              <div><img src="images/page1_img4.jpg" alt="">
+              <div><img src="../images/page1_img4.jpg" alt="">
                 <div class="col1 upp"> <a href="#">Lorem ipsum doamet consectet</a></div>
                 <span> Dorem ipsum dolor amet consectetur</span>
                 <div class="price">45$</div>
               </div>
             </li>
             <li>
-              <div><img src="images/page1_img3.jpg" alt="">
+              <div><img src="../images/page1_img3.jpg" alt="">
                 <div class="col1 upp"> <a href="#">Lorem ipsum doamet consectet</a></div>
                 <span> Dorem ipsum dolor amet consectetur</span>
                 <div class="price">45$</div>
@@ -245,7 +245,7 @@ Financial results as measures of success
           <div class="socials"> <a href="#"></a> <a href="#"></a> <a href="#"></a> </div>
           <nav>
             <ul>
-              <li class="current"><a href="index.html">Home</a></li>
+              <li class="current"><a href="../index.html">Home</a></li>
               <li><a href="about-us.html">About Us</a></li>
               <li><a href="menu.html">Menu</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
@@ -267,12 +267,12 @@ Financial results as measures of success
         </div>
       </div>
       <div class="clear"></div>
-    </div>
+    </div>img src
   </div>
 </div>
 <footer>
   <div class="container_12">
-    <div class="grid_12"> VISNHU SAGAR &copy; 2015 | <a href="#">Privacy Policy</a> | <!-- Design by: <a href="http://www.templatemonster.com/">TemplateMonster.com</a>  --> </div>
+    <div class="grid_12"> VISNHU SAGAR &copy; 2015 | <a href="#">Privacy Policy</a></div>
     <div class="clear"></div>
   </div>
 </footer>
