--- a/shivsagar.com/shiv-sagar/pages/ourstory.html
+++ b/shivsagar.com/shiv-sagar/pages/ourstory.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Gourmet Traditional Restaurant</title>
+<title>Vishnu Sagar Restaurant and Lodge | Our Story</title>
 <meta charset="utf-8">
-<link rel="icon" href="images/favicon.ico">
-<link rel="shortcut icon" href="images/favicon.ico">
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/slider.css">
-<script src="js/jquery.js"></script>
-<script src="js/jquery-migrate-1.1.1.js"></script>
-<script src="js/superfish.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/sForm.js"></script>
-<script src="js/jquery.carouFredSel-6.1.0-packed.js"></script>
-<script src="js/tms-0.4.1.js"></script>
+<link rel="icon" href="../images/favicon.ico">
+<link rel="shortcut icon" href="../images/favicon.ico">
+<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="../css/slider.css">
+<script src="../js/jquery.js"></script>
+<script src="../js/jquery-migrate-1.1.1.js"></script>
+<script src="../js/superfish.js"></script>
+<script src="../js/jquery.easing.1.3.js"></script>
+<script src="../js/sForm.js"></script>
+<script src="../js/jquery.carouFredSel-6.1.0-packed.js"></script>
+<script src="../js/tms-0.4.1.js"></script>
 <script>
 
 $(window).load(function () {
@@ -65,11 +65,11 @@ $(window).load(function () {
  <header>
     <div class="container_12">
       <div class="grid_12">
-        <h1><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
+        <h1><a href="../index.html"><img src="../images/logo.png" alt=""></a></h1>
         <div class="menu_block">
           <nav>
             <ul class="sf-menu">
-              <li class="current"><a href="index.html">Home</a></li>
+              <li class="current"><a href="../index.html">Home</a></li>
               <li class="with_ul"><a href="#">About Us</a>
                <ul>
                   <li><a href="mission.html"> MISSION</a></li>
@@ -112,7 +112,7 @@ $(window).load(function () {
       <div class="grid_5">
 	  
         <h2>OUR STORY</h2>
-        <img src="images/page2_img1.jpg" alt="" class="img_inner">
+        <img src="../images/page2_img1.jpg" alt="" class="img_inner">
         <p class="col1">
 <b>VISHNU SAGAR RESTUARANT: </b></p>
 		 <p class="col1">		
@@ -139,7 +139,7 @@ Welcome to a new generation of budget hotels in Manhattan. Out with the excessiv
         <h2>TESTIMONIALS</h2>
         <ul class="carousel2">
           <li>
-            <blockquote> <img src="images/page2_img2.png" alt="">
+            <blockquote> <img src="../images/page2_img2.png" alt="">
               <div class="extra_wrapper">
 			  <br>
                 <div class="title">Mr. &amp; Mrs. Ram <br>
@@ -152,7 +152,7 @@ Welcome to a new generation of budget hotels in Manhattan. Out with the excessiv
           </li>
           <li>
 		  <br>
-            <blockquote> <img src="images/page2_img2-1.png" alt="">
+            <blockquote> <img src="../images/page2_img2-1.png" alt="">
               <div class="extra_wrapper">
                 <br>
 				<div class="title">Ram &amp; Shwetha<br>
@@ -166,7 +166,7 @@ Welcome to a new generation of budget hotels in Manhattan. Out with the excessiv
 		
 		<li>
 		<br>
-            <blockquote> <img src="images/page2_img3.png" alt="">
+            <blockquote> <img src="../images/page2_img3.png" alt="">
               <div class="extra_wrapper">
 			  <br>
                 <div class="title">Anu &amp; Sree <br>
@@ -195,16 +195,16 @@ I would stay at the hotel again if in the area! </p>
       </div>
       <div class="clear"></div>
       <div class="chefs"> -->
-       <!--  <div class="grid_3"> <img src="images/page2_img3.jpg" alt="" class="img_inner">
+       <!--  <div class="grid_3"> <img src="../images/page2_img3.jpg" alt="" class="img_inner">
           <p class="col1"><a href="#">Ann Franklin</a></p>
           Nulla pellentesque tempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa yht. semper sed interdum arcu </div>
-        <div class="grid_3"> <img src="images/page2_img4.jpg" alt="" class="img_inner">
+        <div class="grid_3"> <img src="../images/page2_img4.jpg" alt="" class="img_inner">
           <p class="col1"><a href="#"> Milisa Dayemond</a></p>
           Lorem ipsum pellentesque tempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa iaculis. Integer a diam a odio. </div>
-        <div class="grid_3"> <img src="images/page2_img5.jpg" alt="" class="img_inner">
+        <div class="grid_3"> <img src="../images/page2_img5.jpg" alt="" class="img_inner">
           <p class="col1"><a href="#">Liza Croft</a></p>
           Aenean velittempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa yht. semper sed interdum. </div> -->
-     <!--    <div class="grid_3"> <img src="images/page2_img6.jpg" alt="" class="img_inner">
+     <!--    <div class="grid_3"> <img src="../images/page2_img6.jpg" alt="" class="img_inner">
           <p class="col1"><a href="#">Alan Soares</a></p>
           Donec necllentesque tempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa yht. semper sed interdum. </div> -->
       </div>
@@ -215,7 +215,7 @@ I would stay at the hotel again if in the area! </p>
           <div class="socials"> <a href="#"></a> <a href="#"></a> <a href="#"></a> </div>
           <nav>
             <ul>
-              <li><a href="index.html">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li class="current"><a href="about-us.html">About Us</a></li>
               <li><a href="menu.html">Menu</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
@@ -296,7 +296,7 @@ I would stay at the hotel again if in the area! </p>
     <div class="container_12">
       <div class="grid_5">
         <h2>About Us</h2>
-        <img src="images/page2_img1.jpg" alt="" class="img_inner">
+        <img src="../images/page2_img1.jpg" alt="" class="img_inner">
         <p class="col1">VISHNU SAGAR RESTUARANT:  
   
 It all began on February 17, 1993, when Kent Taylor opened the first Texas Roadhouse in Clarksville, Indiana.  Kent’s goal was to own not just a family restaurant and not just a steak restaurant, but a place where everyone, of all ages, could come and have a great meal and great fun for a great price.
@@ -331,7 +331,7 @@ BOOK YOUR POD NOW! COME MAKE NEW FRIENDS.
         <h2>Testimonials</h2>
         <ul class="carousel2">
           <li>
-            <blockquote> <img src="images/page2_img2.png" alt="">
+            <blockquote> <img src="../images/page2_img2.png" alt="">
               <div class="extra_wrapper">
                 <div class="title">Sara &amp; Kevin <br>
                   Jonson</div>
@@ -343,7 +343,7 @@ BOOK YOUR POD NOW! COME MAKE NEW FRIENDS.
             </blockquote>
           </li>
           <li>
-            <blockquote> <img src="images/page2_img2-1.png" alt="">
+            <blockquote> <img src="../images/page2_img2-1.png" alt="">
               <div class="extra_wrapper">
                 <div class="title">Moira &amp; Brett<br>
                   Clark</div>
@@ -363,16 +363,16 @@ BOOK YOUR POD NOW! COME MAKE NEW FRIENDS.
       </div>
       <div class="clear"></div>
       <div class="chefs">
-        <div class="grid_3"> <img src="images/page2_img3.jpg" alt="" class="img_inner">
+        <div class="grid_3"> <img src="../images/page2_img3.jpg" alt="" class="img_inner">
           <p class="col1"><a href="#">Ann Franklin</a></p>
           Nulla pellentesque tempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa yht. semper sed interdum arcu </div>
-        <div class="grid_3"> <img src="images/page2_img4.jpg" alt="" class="img_inner">
+        <div class="grid_3"> <img src="../images/page2_img4.jpg" alt="" class="img_inner">
           <p class="col1"><a href="#"> Milisa Dayemond</a></p>
           Lorem ipsum pellentesque tempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa iaculis. Integer a diam a odio. </div>
-        <div class="grid_3"> <img src="images/page2_img5.jpg" alt="" class="img_inner">
+        <div class="grid_3"> <img src="../images/page2_img5.jpg" alt="" class="img_inner">
           <p class="col1"><a href="#">Liza Croft</a></p>
           Aenean velittempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa yht. semper sed interdum. </div>
-        <div class="grid_3"> <img src="images/page2_img6.jpg" alt="" class="img_inner">
+        <div class="grid_3"> <img src="../images/page2_img6.jpg" alt="" class="img_inner">
           <p class="col1"><a href="#">Alan Soares</a></p>
           Donec necllentesque tempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa yht. semper sed interdum. </div>
       </div>
@@ -387,7 +387,7 @@ BOOK YOUR POD NOW! COME MAKE NEW FRIENDS.
           <div class="socials"> <a href="#"></a> <a href="#"></a> <a href="#"></a> </div>
           <nav>
             <ul>
-              <li class="current"><a href="index.html">Home</a></li>
+              <li class="current"><a href="../index.html">Home</a></li>
               <li><a href="about-us.html">About Us</a></li>
               <li><a href="menu.html">Menu</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
