--- a/shivsagar.com/shiv-sagar/pages/about-us.html
+++ b/shivsagar.com/shiv-sagar/pages/about-us.html
@@ -1,17 +1,17 @@
 <!-- <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>VISHNU SAGAR | About Us</title>
+<title>Vishnu Sagar Restaurant and Lodge | About Us</title>
 <meta charset="utf-8">
-<link rel="icon" href="images/favicon.ico">
-<link rel="shortcut icon" href="images/favicon.ico">
-<link rel="stylesheet" href="css/style.css">
-<script src="js/jquery.js"></script>
-<script src="js/jquery-migrate-1.1.1.js"></script>
-<script src="js/superfish.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/sForm.js"></script>
-<script src="js/jquery.carouFredSel-6.1.0-packed.js"></script>
+<link rel="icon" href="../images/favicon.ico">
+<link rel="shortcut icon" href="../images/favicon.ico">
+<link rel="stylesheet" href="../css/style.css">
+<script src="../js/jquery.js"></script>
+<script src="../js/jquery-migrate-1.1.1.js"></script>
+<script src="../js/superfish.js"></script>
+<script src="../js/jquery.easing.1.3.js"></script>
+<script src="../js/sForm.js"></script>
+<script src="../js/jquery.carouFredSel-6.1.0-packed.js"></script>
 <script>
 $(window).load(function () {
     $('.carousel2').carouFredSel({
@@ -53,8 +53,8 @@ $(window).load(function () {
 
 
 <!--[if lt IE 9]>
-<script src="js/html5shiv.js"></script>
-<link rel="stylesheet" media="screen" href="css/ie.css">
+<script src="../js/html5shiv.js"></script>
+<link rel="stylesheet" media="screen" href="../css/ie.css">
 <![endif]-->
 
 
@@ -77,11 +77,11 @@ $(window).load(function () {
   <header>
     <div class="container_12">
       <div class="grid_12">
-        <h1><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
+        <h1><a href="index.html"><img src="../images/logo.png" alt=""></a></h1>
         <div class="menu_block">
           <nav>
                 <ul class="sf-menu">
-              <li class="current"><a href="index.html">Home</a></li>
+              <li class="current"><a href="../index.html">Home</a></li>
               <li class="with_ul"><a href="about-us.html">About Us</a>
                <ul>
                   <li><a href="mission.html"> MISSION</a></li>
@@ -120,7 +120,7 @@ $(window).load(function () {
     <div class="container_12">
       <div class="grid_5">
         <h2>About Us</h2>
-        <img src="images/page2_img1.jpg" alt="" class="img_inner">
+        <img src="../images/page2_img1.jpg" alt="" class="img_inner">
         <p class="col1">Curabitur in turpisju massa. Donec et nibh non turpis pellentesque suscipit eget. </p>
         <p>Ghfgop Maecnas cursus fringilla sagittis. Donec eu felis purus, iaculis fringilla ipsum. Inte ger non nulla sem, eget volutpat augue. Curabitur in turpisju massa. Donec et nibh non turpis pellentesque suscipit eget. </p>
         Donec eu felis purus, iaculis fringilla ipsum. Integer non. nulla sem, eget volutpat augue. Curabitur in turpisju massa. Donec et nibh non turpis pellentesque suscipit eget vel odio. Sed tempus orci tempus libero suscipit elementum. Aliquam consectetur. Ghfgop Maecnas cursus. <br>
@@ -129,7 +129,7 @@ $(window).load(function () {
         <h2>Testimonials</h2>
         <ul class="carousel2">
           <li>
-            <blockquote> <img src="images/page2_img2.png" alt="">
+            <blockquote> <img src="../images/page2_img2.png" alt="">
               <div class="extra_wrapper">
                 <div class="title">Sara &amp; Kevin <br>
                   Jonson</div>
@@ -141,7 +141,7 @@ $(window).load(function () {
             </blockquote>
           </li>
           <li>
-            <blockquote> <img src="images/page2_img2-1.png" alt="">
+            <blockquote> <img src="../images/page2_img2-1.png" alt="">
               <div class="extra_wrapper">
                 <div class="title">Moira &amp; Brett<br>
                   Clark</div>
@@ -161,16 +161,16 @@ $(window).load(function () {
       </div>
       <div class="clear"></div>
       <div class="chefs">
-        <div class="grid_3"> <img src="images/page2_img3.jpg" alt="" class="img_inner">
+        <div class="grid_3"> <img src="../images/page2_img3.jpg" alt="" class="img_inner">
           <p class="col1"><a href="#">Ann Franklin</a></p>
           Nulla pellentesque tempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa yht. semper sed interdum arcu </div>
-        <div class="grid_3"> <img src="images/page2_img4.jpg" alt="" class="img_inner">
+        <div class="grid_3"> <img src="../images/page2_img4.jpg" alt="" class="img_inner">
           <p class="col1"><a href="#"> Milisa Dayemond</a></p>
           Lorem ipsum pellentesque tempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa iaculis. Integer a diam a odio. </div>
-        <div class="grid_3"> <img src="images/page2_img5.jpg" alt="" class="img_inner">
+        <div class="grid_3"> <img src="../images/page2_img5.jpg" alt="" class="img_inner">
           <p class="col1"><a href="#">Liza Croft</a></p>
           Aenean velittempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa yht. semper sed interdum. </div>
-        <div class="grid_3"> <img src="images/page2_img6.jpg" alt="" class="img_inner">
+        <div class="grid_3"> <img src="../images/page2_img6.jpg" alt="" class="img_inner">
           <p class="col1"><a href="#">Alan Soares</a></p>
           Donec necllentesque tempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa yht. semper sed interdum. </div>
       </div>
@@ -208,7 +208,7 @@ $(window).load(function () {
 </div>
 <footer>
   <div class="container_12">
-    <div class="grid_12"> VISNHU SAGAR &copy; 2015 | <a href="#">Privacy Policy</a> | <!-- Design by: <a href="http://www.templatemonster.com/">TemplateMonster.com</a>  --> <!-- </div>
+    <div class="grid_12"> VISNHU SAGAR &copy; 2015 | <a href="#">Privacy Policy</a> <!-- </div>
     <div class="clear"></div>
   </div>
 </footer>
