--- a/shivsagar.com/shiv-sagar/pages/features-rest.html
+++ b/shivsagar.com/shiv-sagar/pages/features-rest.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Gourmet Traditional Restaurant | News</title>
+<title>Vishnu Sagar Restaurant and Lodge | News</title>
 <meta charset="utf-8">
-<link rel="icon" href="images/favicon.ico">
-<link rel="shortcut icon" href="images/favicon.ico">
-<link rel="stylesheet" href="css/style.css">
-<script src="js/jquery.js"></script>
-<script src="js/jquery-migrate-1.1.1.js"></script>
-<script src="js/superfish.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/sForm.js"></script>
+<link rel="icon" href="../images/favicon.ico">
+<link rel="shortcut icon" href="../images/favicon.ico">
+<link rel="stylesheet" href="../css/style.css">
+<script src="../js/jquery.js"></script>
+<script src="../js/jquery-migrate-1.1.1.js"></script>
+<script src="../js/superfish.js"></script>
+<script src="../js/jquery.easing.1.3.js"></script>
+<script src="../js/sForm.js"></script>
 <!--[if lt IE 9]>
-<script src="js/html5shiv.js"></script>
-<link rel="stylesheet" media="screen" href="css/ie.css">
+<script src="../js/html5shiv.js"></script>
+<link rel="stylesheet" media="screen" href="../css/ie.css">
 <![endif]-->
 </head>
 <body>
@@ -21,11 +21,11 @@
  <header>
     <div class="container_12">
       <div class="grid_12">
-        <h1><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
+        <h1><a href="../index.html"><img src="../images/logo.png" alt=""></a></h1>
         <div class="menu_block">
           <nav>
             <ul class="sf-menu">
-              <li class="current"><a href="index.html">Home</a></li>
+              <li class="current"><a href="../index.html">Home</a></li>
               <li class="with_ul"><a href="#">About Us</a>
                <ul>
                   <li><a href="mission.html"> MISSION</a></li>
@@ -69,7 +69,7 @@
       <div class="grid_7">
         <h2 class="head2">Upcoming Features</h2>
 		
-        <div class="news"> <img src="images/page5_img1.jpg" alt="" class="img_inner fleft">
+        <div class="news"> <img src="../images/page5_img1.jpg" alt="" class="img_inner fleft">
           <div class="extra_wrapper">
             <div class="col1">
 			
@@ -86,7 +86,7 @@ Features is famous for our pizza and now you can get it for only $10. Dine-in on
             <!-- <a href="#" class="btn">More</a> --> </div>
         </div>
 		
-        <div class="news mb0"> <img src="images/page5_img2.jpg" alt="" class="img_inner fleft">
+        <div class="news mb0"> <img src="../images/page5_img2.jpg" alt="" class="img_inner fleft">
           <div class="extra_wrapper">
             <div class="col1"><b>Indoor Swimming Pool</b>
 			
@@ -134,7 +134,7 @@ Club guests also have special access to the Club Lounge. A relaxing, upscale spa
           <div class="socials"> <a href="#"></a> <a href="#"></a> <a href="#"></a> </div>
           <nav>
             <ul>
-              <li><a href="index.html">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li><a href="about-us.html">About Us</a></li>
               <li><a href="menu.html">Menu</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
@@ -161,7 +161,7 @@ Club guests also have special access to the Club Lounge. A relaxing, upscale spa
 </div>
 <footer>
   <div class="container_12">
-    <div class="grid_12"> VISNHU SAGAR &copy; 2015 | <a href="#">Privacy Policy</a> | <!-- Design by: <a href="http://www.templatemonster.com/">TemplateMonster.com</a>  --> </div>
+    <div class="grid_12"> VISNHU SAGAR &copy; 2015 | <a href="#">Privacy Policy</a></div>
     <div class="clear"></div>
   </div>
 </footer>
