--- a/shivsagar.com/shiv-sagar/pages/menu.html
+++ b/shivsagar.com/shiv-sagar/pages/menu.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Gourmet Traditional Restaurant | Menu</title>
+<title>Vishnu Sagar Restaurant and Lodge | Menu</title>
 <meta charset="utf-8">
-<link rel="icon" href="images/favicon.ico">
-<link rel="shortcut icon" href="images/favicon.ico">
-<link rel="stylesheet" href="css/style.css">
-<script src="js/jquery.js"></script>
-<script src="js/jquery-migrate-1.1.1.js"></script>
-<script src="js/superfish.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/sForm.js"></script>
+<link rel="icon" href="../images/favicon.ico">
+<link rel="shortcut icon" href="../images/favicon.ico">
+<link rel="stylesheet" href="../css/style.css">
+<script src="../js/jquery.js"></script>
+<script src="../js/jquery-migrate-1.1.1.js"></script>
+<script src="../js/superfish.js"></script>
+<script src="../js/jquery.easing.1.3.js"></script>
+<script src="../js/sForm.js"></script>
 <!--[if lt IE 9]>
-<script src="js/html5shiv.js"></script>
-<link rel="stylesheet" media="screen" href="css/ie.css">
+<script src="../js/html5shiv.js"></script>
+<link rel="stylesheet" media="screen" href="../css/ie.css">
 <![endif]-->
 </head>
 <body>
@@ -21,11 +21,11 @@
    <header>
     <div class="container_12">
       <div class="grid_12">
-        <h1><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
+        <h1><a href="../index.html"><img src="../images/logo.png" alt=""></a></h1>
         <div class="menu_block">
           <nav>
             <ul class="sf-menu">
-              <li class="current"><a href="index.html">Home</a></li>
+              <li class="current"><a href="../index.html">Home</a></li>
               <li class="with_ul"><a href="#">About Us</a>
                <ul>
                   <li><a href="mission.html"> MISSION</a></li>
@@ -69,22 +69,22 @@
         <p class="col2 inn1"><a href="#">Integer non metus justo ac posuere turpis. Integer iaculis porta metus, in aliquam orci vehicula sit amet. Suspendisse turpis mauris, laoreet ac aliquet a lobortis in massa. Etiam tortor metus, tincidunt vel congue etu</a></p>
         <p>Aenean sed nunc lorem, nec ornare nibh. Pellentesque vitae sem odio. Vivamus vulputate est eget elit rutrum a consectetur justo aliquet. Aliquam hendrerit consectetur mi, non molestie massa venenatis quis. Integer aliquet euismod nisl, et sagittis sem scelerisque sit amet. Etiam dapibus, tellus et imperdiet pulvinar, urna nunc consectetur enim, in </p>
         <div class="menu">
-          <div class="grid_3 alpha"> <img src="images/page3_img1.jpg" alt="" class="img_inner">
+          <div class="grid_3 alpha"> <img src="../images/page3_img1.jpg" alt="" class="img_inner">
             <h3><a href="#">Donec</a></h3>
           </div>
-          <div class="grid_3 omega"> <img src="images/page3_img2.jpg" alt="" class="img_inner">
+          <div class="grid_3 omega"> <img src="../images/page3_img2.jpg" alt="" class="img_inner">
             <h3><a href="#">Murtyio</a></h3>
           </div>
-          <div class="grid_3 alpha"> <img src="images/page3_img3.jpg" alt="" class="img_inner">
+          <div class="grid_3 alpha"> <img src="../images/page3_img3.jpg" alt="" class="img_inner">
             <h3><a href="#">Holity as Polfh</a></h3>
           </div>
-          <div class="grid_3 omega"> <img src="images/page3_img4.jpg" alt="" class="img_inner">
+          <div class="grid_3 omega"> <img src="../images/page3_img4.jpg" alt="" class="img_inner">
             <h3><a href="#">Kiperty</a></h3>
           </div>
-          <div class="grid_3 alpha"> <img src="images/page3_img5.jpg" alt="" class="img_inner">
+          <div class="grid_3 alpha"> <img src="../images/page3_img5.jpg" alt="" class="img_inner">
             <h3 class="mb0"><a href="#">Gyloit</a></h3>
           </div>
-          <div class="grid_3 omega"> <img src="images/page3_img6.jpg" alt="" class="img_inner">
+          <div class="grid_3 omega"> <img src="../images/page3_img6.jpg" alt="" class="img_inner">
             <h3 class="mb0"><a href="#">Liotymer</a></h3>
           </div>
         </div>
@@ -126,7 +126,7 @@
           <div class="socials"> <a href="#"></a> <a href="#"></a> <a href="#"></a> </div>
           <nav>
             <ul>
-              <li><a href="index.html">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li><a href="about-us.html">About Us</a></li>
               <li class="current"><a href="menu.html">Menu</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
@@ -153,7 +153,7 @@
 </div>
 <footer>
   <div class="container_12">
-    <div class="grid_12"> VISNHU SAGAR &copy; 2015 | <a href="#">Privacy Policy</a> | <!-- Design by: <a href="http://www.templatemonster.com/">TemplateMonster.com</a>  --> </div>
+    <div class="grid_12"> VISNHU SAGAR &copy; 2015 | <a href="#">Privacy Policy</a></div>
     <div class="clear"></div>
   </div>
 </footer>
