--- a/shivsagar.com/shiv-sagar/pages/news.html
+++ b/shivsagar.com/shiv-sagar/pages/news.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Gourmet Traditional Restaurant | News</title>
+<title>Vishnu Sagar Restaurant and Lodge | News</title>
 <meta charset="utf-8">
-<link rel="icon" href="images/favicon.ico">
-<link rel="shortcut icon" href="images/favicon.ico">
-<link rel="stylesheet" href="css/style.css">
-<script src="js/jquery.js"></script>
-<script src="js/jquery-migrate-1.1.1.js"></script>
-<script src="js/superfish.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/sForm.js"></script>
+<link rel="icon" href="../images/favicon.ico">
+<link rel="shortcut icon" href="../images/favicon.ico">
+<link rel="stylesheet" href="../css/style.css">
+<script src="../js/jquery.js"></script>
+<script src="../js/jquery-migrate-1.1.1.js"></script>
+<script src="../js/superfish.js"></script>
+<script src="../js/jquery.easing.1.3.js"></script>
+<script src="../js/sForm.js"></script>
 <!--[if lt IE 9]>
-<script src="js/html5shiv.js"></script>
-<link rel="stylesheet" media="screen" href="css/ie.css">
+<script src="../js/html5shiv.js"></script>
+<link rel="stylesheet" media="screen" href="../css/ie.css">
 <![endif]-->
 </head>
 <body>
@@ -21,11 +21,11 @@
  <header>
     <div class="container_12">
       <div class="grid_12">
-        <h1><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
+        <h1><a href="../index.html"><img src="../../images/logo.png" alt=""></a></h1>
         <div class="menu_block">
           <nav>
             <ul class="sf-menu">
-              <li class="current"><a href="index.html">Home</a></li>
+              <li class="current"><a href="../index.html">Home</a></li>
               <li class="with_ul"><a href="#">About Us</a>
                <ul>
                   <li><a href="mission.html"> MISSION</a></li>
@@ -66,14 +66,14 @@
     <div class="container_12">
       <div class="grid_7">
         <h2 class="head2">Latest News</h2>
-        <div class="news"> <img src="images/page5_img1.jpg" alt="" class="img_inner fleft">
+        <div class="news"> <img src="../images/page5_img1.jpg" alt="" class="img_inner fleft">
           <div class="extra_wrapper">
             <div class="col1">Aenean nonummy hendrerit mau rellus porta. Fusce suscipit varius m sociis natoque penaibet mapaturent. </div>
             <p>Montes nasetur ridiculumula dui. Fusce feugiatlesuada o krjg fdio. Morbi nusem. GIoadscs lkierhdc v hfrjgDuis ultricies pharetra magna. Donec accusan mal esuada orcec sit amet eros. </p>
             <p>Lorem ipsum dolor sit amet consectetuer adipiscing elit. Mauris fermentum dictum magna. Sed oreetliquam tellus dolor elementum vel cursus eleife. agna. Donec accumsan malesuada orcec sit amet </p>
             <a href="#" class="btn">More</a> </div>
         </div>
-        <div class="news mb0"> <img src="images/page5_img2.jpg" alt="" class="img_inner fleft">
+        <div class="news mb0"> <img src="../images/page5_img2.jpg" alt="" class="img_inner fleft">
           <div class="extra_wrapper">
             <div class="col1">Nuinean nonummy hendrerit mau rellus porta. Fusce varius m sociis natoque penaibet magni partur.</div>
             <p>Ent montes nasetur ridiculumula dui. KHgsce feugiat malesuada o krjg fdio. Joorbi nusem. GIoadscs lkierdc vhfrujgDuis ultricies pharetra magna. Donec accumsan masuada orcec sit amet eros. </p>
@@ -114,7 +114,7 @@
           <div class="socials"> <a href="#"></a> <a href="#"></a> <a href="#"></a> </div>
           <nav>
             <ul>
-              <li><a href="index.html">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li><a href="about-us.html">About Us</a></li>
               <li><a href="menu.html">Menu</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
@@ -141,7 +141,7 @@
 </div>
 <footer>
   <div class="container_12">
-    <div class="grid_12"> VISNHU SAGAR &copy; 2015 | <a href="#">Privacy Policy</a> | <!-- Design by: <a href="http://www.templatemonster.com/">TemplateMonster.com</a>  --> </div>
+    <div class="grid_12"> VISNHU SAGAR &copy; 2015 | <a href="#">Privacy Policy</a></div>
     <div class="clear"></div>
   </div>
 </footer>
