--- a/shivsagar.com/shiv-sagar/pages/portfolio.html
+++ b/shivsagar.com/shiv-sagar/pages/portfolio.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Gourmet Traditional Restaurant | Portfolio</title>
+<title>Vishnu Sagar Restaurant and Lodge | Restaurant Portfolio</title>
 <meta charset="utf-8">
-<link rel="icon" href="images/favicon.ico">
-<link rel="shortcut icon" href="images/favicon.ico">
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/prettyPhoto.css">
-<script src="js/jquery.js"></script>
-<script src="js/jquery-migrate-1.1.1.js"></script>
-<script src="js/superfish.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/sForm.js"></script>
-<script src="js/jquery.prettyPhoto.js"></script>
+<link rel="icon" href="../images/favicon.ico">
+<link rel="shortcut icon" href="../images/favicon.ico">
+<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="../css/prettyPhoto.css">
+<script src="../js/jquery.js"></script>
+<script src="../js/jquery-migrate-1.1.1.js"></script>
+<script src="../js/superfish.js"></script>
+<script src="../js/jquery.easing.1.3.js"></script>
+<script src="../js/sForm.js"></script>
+<script src="j../s/jquery.prettyPhoto.js"></script>
 <script>
 $(document).ready(function () {
     $("a[data-gal^='prettyPhoto']").prettyPhoto({
@@ -21,8 +21,8 @@ $(document).ready(function () {
 });
 </script>
 <!--[if lt IE 9]>
-<script src="js/html5shiv.js"></script>
-<link rel="stylesheet" media="screen" href="css/ie.css">
+<script src="../js/html5shiv.js"></script>
+<link rel="stylesheet" media="screen" href="../css/ie.css">
 <![endif]-->
 </head>
 <body>
@@ -30,11 +30,11 @@ $(document).ready(function () {
   <header>
     <div class="container_12">
       <div class="grid_12">
-        <h1><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
+        <h1><a href="../index.html"><img src="../images/logo.png" alt=""></a></h1>
         <div class="menu_block">
           <nav>
             <ul class="sf-menu">
-              <li class="current"><a href="index.html">Home</a></li>
+              <li class="current"><a href="../index.html">Home</a></li>
               <li class="with_ul"><a href="#">About Us</a>
                <ul>
                   <li><a href="mission.html"> MISSION</a></li>
@@ -78,10 +78,10 @@ $(document).ready(function () {
       </div>
       <div class="clear"></div>
       <div class="portfolio">
-        <div class="grid_6"><a href="images/big3.jpg" data-gal="prettyPhoto[1]"><span></span><img src="images/page4_img1.jpg" alt=""></a></div>
-        <div class="grid_6"><a href="images/big2.jpg" data-gal="prettyPhoto[1]"><span></span><img src="images/page4_img2.jpg" alt=""></a></div>
-        <div class="grid_6"><a href="images/big4.jpg" data-gal="prettyPhoto[1]"><span></span><img src="images/page4_img3.jpg" alt=""></a></div>
-        <div class="grid_6"><a href="images/big1.jpg" data-gal="prettyPhoto[1]"><span></span><img src="images/page4_img4.jpg" alt=""></a></div>
+        <div class="grid_6"><a href="images/big3.jpg" data-gal="prettyPhoto[1]"><span></span><img src="../images/page4_img1.jpg" alt=""></a></div>
+        <div class="grid_6"><a href="images/big2.jpg" data-gal="prettyPhoto[1]"><span></span><img src="../images/page4_img2.jpg" alt=""></a></div>
+        <div class="grid_6"><a href="images/big4.jpg" data-gal="prettyPhoto[1]"><span></span><img src="../images/page4_img3.jpg" alt=""></a></div>
+        <div class="grid_6"><a href="images/big1.jpg" data-gal="prettyPhoto[1]"><span></span><img src="../images/page4_img4.jpg" alt=""></a></div>
       </div>
       <div class="clear"></div>
       <div class="bottom_block">
@@ -90,7 +90,7 @@ $(document).ready(function () {
           <div class="socials"> <a href="#"></a> <a href="#"></a> <a href="#"></a> </div>
           <nav>
             <ul>
-              <li><a href="index.html">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li><a href="about-us.html">About Us</a></li>
               <li><a href="menu.html">Menu</a></li>
               <li class="current"><a href="portfolio.html">Portfolio</a></li>
@@ -117,7 +117,7 @@ $(document).ready(function () {
 </div>
 <footer>
   <div class="container_12">
-    <div class="grid_12"> VISNHU SAGAR &copy; 2015 | <a href="#">Privacy Policy</a> | <!-- Design by: <a href="http://www.templatemonster.com/">TemplateMonster.com</a>  --> </div>
+    <div class="grid_12"> VISNHU SAGAR &copy; 2015 | <a href="#">Privacy Policy</a> </div>
     <div class="clear"></div>
   </div>
 </footer>
