changed delta links

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -93,7 +93,7 @@
             <li><a href="menu.html">Menu</a></li>
             <li class="current"><a href="portfolio.html">Portfolio</a></li>
             <li><a href="news.html">News</a></li>
-            <li><a href="#">Contacts</a></li>
+            <li><a href="contacts.html">Contacts</a></li>
           </ul>
         </nav>
       </div>
