changed page linking

--- a/vishnu-sagar/home.html
+++ b/vishnu-sagar/home.html
@@ -90,7 +90,7 @@
            </li>
            <li><a href="pages/menu.html">Restaurant</a>
             <ul>
-             <li><a href="menu.html"> MENU</a></li>
+             <li><a href="pages/menu.html"> MENU</a></li>
              <li><a href="pages/portfolio.html">Gallery</a></li>
              <li><a href="pages/features-rest.html"> Features</a></li>
            </ul>
