--- a/pages/features-rest.html
+++ b/pages/features-rest.html
@@ -70,12 +70,12 @@
           <div class="col1">
 
             <p><b>Monday Specials</b><br>
-              Happy Hour 4pm-6pm: $1.50 Drafts, $2 Rails, $11 Buckets of Beer, and Select Apps 1/2 Off! Bring your friends. </p>
+              Happy Hour 4pm-6pm: Rs 1.50 Drafts, Rs 2 Rails, Rs 11 Buckets of Beer, and Select Apps 1/2 Off! Bring your friends. </p>
 
 
             </div>
             <b>Friday Specials </b><br>
-            1 Large, 2 Topping Pizza - Only $10
+            1 Large, 2 Topping Pizza - Only Rs 10
             Features is famous for our pizza and now you can get it for only $10. Dine-in only so make Mondays family night or another great reason to get together with friends.
             <!-- <a href="#" class="btn">More</a> --> </div>
           </div>
