--- a/pages/ourstory.html
+++ b/pages/ourstory.html
@@ -110,25 +110,25 @@
       <img src="../images/page2_img1.jpg" alt="" class="img_inner">
       <p class="col1">
         <b>VISHNU SAGAR RESTUARANT: </b></p>
-        <p class="col1">		
-          It all began on February 17, 1993, when Kent Taylor opened the first Texas Roadhouse in Clarksville, Indiana.  Kent’s goal was to own not just a family restaurant and not just a steak restaurant, but a place where everyone, of all ages, could come and have a great meal and great fun for a great price.
-          <p class="col1">	
-            We like to brag about our Hand-Cut Steaks, Fall-Off-The-Bone Ribs, Made-From-Scratch Sides, and Fresh-Baked Bread. Everything we do goes into making our hearty meals stand out. We handcraft almost everything we serve. We provide larger portions so you get more food for your dollar. And if you want an Ice Cold Beer or Legendary Margarita to wash it all down — well, we have those, too.
-            <p class="col1">	
-              Our food’s not the only thing that’s Legendary at the Roadhouse — our fun is too! From our line dancers to our jukebox to our friendly servers, you’ll enjoy every second you spend in a Texas Roadhouse.
-              At Texas Roadhouse our team has an incredible sense of pride in everything we do. Our passion ensures you have a Legendary Experience every time.  Because of our passion for our guests and our communities, our team members are involved outside the restaurants in their local communities as a way to give back.
-              The Texas Roadhouse story is simple. Legendary Food, Legendary Service® — 
+        <p class="col1">    
+          It all began on February 17, 2005, when Mr. Sendhuil Kumar opened the Vishnu Sagar Hotel in Bangalore, Indiana.  Sendhil’s goal was to own not just a family restaurant and not just a veg restaurant, but a place where everyone, of all ages, could come and have a great meal and great fun for a great price.
+          <p class="col1">  
+            We like to brag about our Masal Dosa, Vanilla Pie, Made-From-Scratch Sides, and Fresh-Baked Bread. Everything we do goes into making our hearty meals stand out. We handcraft almost everything we serve. We provide larger portions so you get more food for your dollar. And if you want an Ice Cold Beer or Legendary Margarita to wash it all down — well, we have those, too.
+            <p class="col1">  
+              At Vishnu Sagar, our team has an incredible sense of pride in everything we do. Our passion ensures you have a Legendary Experience every time.  Because of our passion for our guests and our communities, our team members are involved outside the restaurants in their local communities as a way to give back.
+        
+              The Vishnu Sagar story is simple. Legendary Food, Legendary Service® — 
               all with lots of Legendary Fun!
 
-              <p class="col1">	
+              <p class="col1">  
 
                 <b>VISHNU SAGAR LODGE:</b>
-                <p class="col1">	 
+                <p class="col1">   
                   What ablout the Lodge?
-                  <br>
-                  Welcome to a new generation of budget hotels in Manhattan. Out with the excessive and the unnecessary. We're all about surprising details, intelligent design and being connected -- all on a budget. We created the pod hotels for savvy travelers like you. People who want to seek and explore. Wander around and become part of the city. Stay in the heart of Manhattan, without spending it all. Book your pod now! Come make new friends.
+                  <br><br>
+                  Welcome to a new generation of budget hotels in Vishnu Sagar Lodge. Out with the excessive and the unnecessary. We're all about surprising details, intelligent design and being connected -- all on a budget. We created the pod hotels for savvy travelers like you. People who want to seek and explore. Wander around and become part of the city. Stay in the heart of Bangalore, without spending it all. Book your pod now! Come make new friends.
 
-                  <br><br>	 </p>	
+                  <br><br>   </p> 
                   <!-- <a href="#" class="btn m1">More</a> --> </div>
                   <div class="grid_5 prefix_2">
                     <h2>TESTIMONIALS</h2>
@@ -141,7 +141,7 @@
                             Iyer</div>
                           </div>
                           <div class="clear"></div>
-                          <p class="col1">"Everything Saturday went perfectly.  The room looked great, the food was delicious, and the staff was friendly and very helpful.  My daughter was so happy with everything.  Thank you again, I will definitely return to the Hawthorne Hotel in the future and recommend it to friends and family." </p>
+                          <p class="col1">"Everything on Saturday went perfectly well.  The room looked great, the food was delicious, and the staff was friendly and very helpful.  My daughter was so happy with everything.  Thank you again, I will definitely return to the Vishnu Sagar Hotel in the future and recommend it to friends and family." </p>
 
                         </blockquote>
                       </li>
@@ -154,7 +154,7 @@
                             </div>
                           </div>
                           <div class="clear"></div>
-                          <p class="col1">We were there for a four-day conference, so we had the opportunity to experience the restaurant, the tavern, the conference facilities, and not quite enough of Salem! The staff are knowledgeable about everything from public transpiration to museums and other attractions to local restaurants. </p>
+                          <p class="col1">We were there for a four-day conference, so we had the opportunity to experience the restaurant, the tavern, the fascinating facilities! The staff are knowledgeable about everything from public transpiration to museums and other attractions to local restaurants. </p>
                         </blockquote>
                       </li>
 
@@ -168,40 +168,16 @@
                             Harsha</div>
                           </div>
                           <div class="clear"></div>
-                          <p class="col1"><a href="#">I had a grand stay at the Wilshire!
+                          <p class="col1"><a href="#">I had a grand stay at the Vishnu Sagar Lodge!
 
                             Upon arriving, I found myself warmly greeted. She explained everything I had available (breakfast daily, free wireless internet access), and took time to give me restaurant recommendations as well as directions.
 
-                            Entering the room, it was clean. The bathroom was also spacious and very clean. The bed was very comfortable and the pillows were just right.
-
-                            I would stay at the hotel again if in the area! </p>
+                            </p>
 
                           </blockquote>
                         </li>
                       </ul>
-
-
-
-                      <!--  <a href="#" class="next1"></a> <a href="#" class="prev1"></a> --> </div>
-                      <!-- <div class="clear"></div> -->
                       <div class="grid_12">
-                       <!--  <div class="hor_separator hor1"></div> -->
-      <!--   <h2 class="head1">Our Best Chefs</h2>
-      </div>
-      <div class="clear"></div>
-      <div class="chefs"> -->
-       <!--  <div class="grid_3"> <img src="../images/page2_img3.jpg" alt="" class="img_inner">
-          <p class="col1"><a href="#">Ann Franklin</a></p>
-          Nulla pellentesque tempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa yht. semper sed interdum arcu </div>
-        <div class="grid_3"> <img src="../images/page2_img4.jpg" alt="" class="img_inner">
-          <p class="col1"><a href="#"> Milisa Dayemond</a></p>
-          Lorem ipsum pellentesque tempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa iaculis. Integer a diam a odio. </div>
-        <div class="grid_3"> <img src="../images/page2_img5.jpg" alt="" class="img_inner">
-          <p class="col1"><a href="#">Liza Croft</a></p>
-          Aenean velittempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa yht. semper sed interdum. </div> -->
-     <!--    <div class="grid_3"> <img src="../images/page2_img6.jpg" alt="" class="img_inner">
-          <p class="col1"><a href="#">Alan Soares</a></p>
-          Donec necllentesque tempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa yht. semper sed interdum. </div> -->
         </div>
         <div class="clear"></div>
         <div class="bottom_block">
@@ -246,175 +222,3 @@
       </footer>
     </body>
     </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <div class="content">
-    <div class="container_12">
-      <div class="grid_5">
-        <h2>About Us</h2>
-        <img src="../images/page2_img1.jpg" alt="" class="img_inner">
-        <p class="col1">VISHNU SAGAR RESTUARANT:  
-  
-It all began on February 17, 1993, when Kent Taylor opened the first Texas Roadhouse in Clarksville, Indiana.  Kent’s goal was to own not just a family restaurant and not just a steak restaurant, but a place where everyone, of all ages, could come and have a great meal and great fun for a great price.
-
-We like to brag about our Hand-Cut Steaks, Fall-Off-The-Bone Ribs, Made-From-Scratch Sides, and Fresh-Baked Bread. Everything we do goes into making our hearty meals stand out. We handcraft almost everything we serve. We provide larger portions so you get more food for your dollar. And if you want an Ice Cold Beer or Legendary Margarita to wash it all down — well, we have those, too.
-
-Our food’s not the only thing that’s Legendary at the Roadhouse — our fun is too! From our line dancers to our jukebox to our friendly servers, you’ll enjoy every second you spend in a Texas Roadhouse.
-At Texas Roadhouse our team has an incredible sense of pride in everything we do. Our passion ensures you have a Legendary Experience every time.  Because of our passion for our guests and our communities, our team members are involved outside the restaurants in their local communities as a way to give back.
-The Texas Roadhouse story is simple. Legendary Food, Legendary Service® — 
-all with lots of Legendary Fun!
-
-<br>
-
-VISHNU SAGAR LODGE:
-  
-WHAT ARE THE POD HOTELS?
-WELCOME TO A NEW GENERATION OF BUDGET HOTELS IN MANHATTAN.
-OUT WITH THE EXCESSIVE AND THE UNNECESSARY.
-WE'RE ALL ABOUT SURPRISING DETAILS, INTELLIGENT
-DESIGN AND BEING CONNECTED -- ALL ON A BUDGET.
-WE CREATED THE POD HOTELS FOR SAVVY TRAVELERS LIKE YOU.
-PEOPLE WHO WANT TO SEEK AND EXPLORE.
-WANDER AROUND AND BECOME PART OF THE CITY.
-STAY IN THE HEART OF MANHATTAN, WITHOUT SPENDING IT ALL.
-BOOK YOUR POD NOW! COME MAKE NEW FRIENDS.  
-
-		<br>
-        <a href="#" class="btn m1">More</a> </div>
-      <div class="grid_5 prefix_2">  
-
- <div class="grid_5 prefix_2">
-        <h2>Testimonials</h2>
-        <ul class="carousel2">
-          <li>
-            <blockquote> <img src="../images/page2_img2.png" alt="">
-              <div class="extra_wrapper">
-                <div class="title">Sara &amp; Kevin <br>
-                  Jonson</div>
-              </div>
-              <div class="clear"></div>
-              <p class="col1"><a href="#">Euismod pellentesque in dui. Semper, enim eget eleifend faucibus, sem libero gravida erat, sit amet viverra dui nisl non nulla. Pellentesque in dui euismod. </a></p>
-              <p>Curabitur felis purus, iaculis fringi. ipsum. Integer non nulla sem, eget volutpat augue. Ghfgop Maecnas cursus fringilla sagittis. Donec eu felis purus, iaculis fringilla ipsum. Inte ger non nulla sem, eget volutpat augue. Curabitur in turpisju massa. Donec et nibh non turpis pellentesque suscipit eget vel odio.  Aliquam consectetur. Fringilla ipsum. </p>
-              <p>Ringilla ipsum. Donec et nibh non turpis pellentesque suscipit eget vel odio. Sed tempus orci tempus libero suscipit elementum. Aliquam consectetur. Ghfgop Maecnas cursus fringilla sagittis. Donec eu felis purus, iaculis fringi. ipsum. Integer non nulla sem, eget volutpat augue. Ghfgop pelle ntesque suscipit eget consectetur.</p>
-            </blockquote>
-          </li>
-          <li>
-            <blockquote> <img src="../images/page2_img2-1.png" alt="">
-              <div class="extra_wrapper">
-                <div class="title">Moira &amp; Brett<br>
-                  Clark</div>
-              </div>
-              <div class="clear"></div>
-              <p class="col1">Pellentesque in dui euismod. Aliquam semper, enim eget eleifend faucibus, sem libero gravida erat, sit amet viverra dui nisl non nulla. Pellentesque in dui euismod nibh suscipi. </p>
-              <p>Donec eu felis purus, iaculis fringi. ipsum. Integer non nulla sem, eget volutpat augue. Ghfgop Maecnas cursus fringilla sagittis. Donec eu felis purus, iaculis fringilla ipsum. Inte ger non nulla sem, eget volutpat augue. Curabitur in turpisju massa. Donec et nibh non turpis pellentesque suscipit eget vel odio.  Aliquam consectetur. Ghfgop Maecnas cursus frin.</p>
-              <p>Curabitur in turpisju massa. Donec et nibh non turpis pellen tesque suscipit eget vel odio. Sed tempus orci tempus libero suscipit elementum. Aliquam consectetur. Ghfgop Maecnas cursus fringilla sagittis. Donec eu felis purus, iaculis fringi. ipsum. Integer non nulla sem, eget volutpat augue. Ghfgop Maecnas cursus fringilla sagittis.</p>
-            </blockquote>
-          </li>
-        </ul>
-        <a href="#" class="next1"></a> <a href="#" class="prev1"></a> </div>
-      <div class="clear"></div>
-      <div class="grid_12">
-        <div class="hor_separator hor1"></div>
-        <h2 class="head1">Our Best Chefs</h2>
-      </div>
-      <div class="clear"></div>
-      <div class="chefs">
-        <div class="grid_3"> <img src="../images/page2_img3.jpg" alt="" class="img_inner">
-          <p class="col1"><a href="#">Ann Franklin</a></p>
-          Nulla pellentesque tempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa yht. semper sed interdum arcu </div>
-        <div class="grid_3"> <img src="../images/page2_img4.jpg" alt="" class="img_inner">
-          <p class="col1"><a href="#"> Milisa Dayemond</a></p>
-          Lorem ipsum pellentesque tempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa iaculis. Integer a diam a odio. </div>
-        <div class="grid_3"> <img src="../images/page2_img5.jpg" alt="" class="img_inner">
-          <p class="col1"><a href="#">Liza Croft</a></p>
-          Aenean velittempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa yht. semper sed interdum. </div>
-        <div class="grid_3"> <img src="../images/page2_img6.jpg" alt="" class="img_inner">
-          <p class="col1"><a href="#">Alan Soares</a></p>
-          Donec necllentesque tempus quam nec porta. Donec nec lorem enim. Aenean velit velit, faucibus sed porta quis, gt er semper ac elit. Aliquam hendrerit mo lestie turpis condimentum tristique. Fty aliquam malesuada orci a massa yht. semper sed interdum. </div>
-      </div>
-      <div class="clear"></div>
-      <div class="bottom_block">
-  
-  
-   <div class="clear"></div>
-      <div class="bottom_block">
-        <div class="grid_6">
-          <h3>Follow Us</h3>
-          <div class="socials"> <a href="#"></a> <a href="#"></a> <a href="#"></a> </div>
-          <nav>
-            <ul>
-              <li class="current"><a href="../home.html">Home</a></li>
-              <li><a href="about-us.html">About Us</a></li>
-              <li><a href="menu.html">Menu</a></li>
-              <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="news.html">News</a></li>
-              <li><a href="#">Contacts</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div class="grid_6">
-          <h3>Email Updates</h3>
-          <p class="col1">Join our digital mailing list and get news<br>
-            deals and be first to know about events</p>
-          <form id="newsletter" action="#">
-            <div class="success">Your subscribe request has been sent!</div>
-            <label class="email">
-              <input type="email" value="Enter e-mail address" >
-              <a href="#" class="btn" data-type="submit">subscribe</a> <span class="error">*This is not a valid email address.</span> </label>
-          </form>
-        </div>
-      </div>
-      <div class="clear"></div>
-    </div>
-  </div>
-</div>
-<footer>
-  <div class="container_12">
-    <div class="grid_12"> VISNHU SAGAR &copy; 2015 | <a href="#">Privacy Policy</a> | </div>
-    <div class="clear"></div>
-  </div>
-</footer>
-</body>
-</html> -->
