--- a/pages/ourstory.html
+++ b/pages/ourstory.html
@@ -141,7 +141,7 @@
                             Iyer</div>
                           </div>
                           <div class="clear"></div>
-                          <p class="col1">"Everything on Saturday went perfectly well.  The room looked great, the food was delicious, and the staff was friendly and very helpful.  My daughter was so happy with everything.  Thank you again, I will definitely return to the Vishnu Sagar Hotel in the future and recommend it to friends and family." </p>
+                          <p class="col1"><q>Everything on Saturday went perfectly well.  The room looked great, the food was delicious, and the staff was friendly and very helpful.  My daughter was so happy with everything.  Thank you again, I will definitely return to the Vishnu Sagar Hotel in the future and recommend it to friends and family.</q> </p>
 
                         </blockquote>
                       </li>
@@ -154,7 +154,7 @@
                             </div>
                           </div>
                           <div class="clear"></div>
-                          <p class="col1">We were there for a four-day conference, so we had the opportunity to experience the restaurant, the tavern, the fascinating facilities! The staff are knowledgeable about everything from public transpiration to museums and other attractions to local restaurants. </p>
+                          <p class="col1"><q>We were there for a four-day conference, so we had the opportunity to experience the restaurant, the tavern, the fascinating facilities! The staff are knowledgeable about everything from public transpiration to museums and other attractions to local restaurants. </q></p>
                         </blockquote>
                       </li>
 
@@ -168,9 +168,9 @@
                             Harsha</div>
                           </div>
                           <div class="clear"></div>
-                          <p class="col1"><a href="#">I had a grand stay at the Vishnu Sagar Lodge!
+                          <p class="col1"><a href="#"><q>I had a grand stay at the Vishnu Sagar Lodge!
 
-                            Upon arriving, I found myself warmly greeted. She explained everything I had available (breakfast daily, free wireless internet access), and took time to give me restaurant recommendations as well as directions.
+                            Upon arriving, I found myself warmly greeted. She explained everything I had available (breakfast daily, free wireless internet access), and took time to give me restaurant recommendations as well as directions.</q>
 
                             </p>
 
